--- a/package.json
+++ b/package.json
@@ -10,11 +10,15 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.3.4",
     "@material-tailwind/react": "^2.1.9",
+    "chart.js": "^4.4.2",
+    "moment": "^2.30.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.51.2",
     "react-icon": "^1.0.0",
+    "react-icons": "^5.0.1",
     "yup": "^1.4.0"
   },
   "devDependencies": {
